# KnowledgeGraphExpander

./: .dockerignore  .env.example  .gitignore  .replit  Dockerfile  LICENSE  README.md  WORKFLOW_START.md  docker-compose.yml  docker-entrypoint.sh  knowledge_explorer.html  main.py  new-git-hook.txt  package-lock.json  package.json  postcss.config.js  pre-push-hook.txt  pyproject.toml  pytest.ini  replit.nix  replit_workflow_instructions.txt  requirements.txt  run.sh  run_with_env.sh  stop.sh  test-prompt.sh  test-report.md  test_verify.txt  test_workflow.txt  tsconfig.json  vitest.config.ts  vitest.setup.ts  workflow_config.txt
attached_assets/: Pasted--Autonomous-Knowledge-Graph-Expansion-System-Implementation-Guide-Summary-This-document-out-1740344651413.txt  Pasted-1-Identify-the-Correct-Server-for-graph-Check-your-code-to-see-which-framework-FastAPI-or-Expr-1740549875085.txt  Pasted-1-Validate-the-Replit-Environment-Configuration-1-Check-the-replit-file-Ensure-that-your-rep-1740550879490.txt  Pasted-Below-are-some-concrete-ways-to-fix-your-column-metadata-does-not-exist-error-while-keeping-the-me-1740548656285.txt  Pasted-Below-is-a-step-by-step-plan-to-resolve-the-column-metadata-does-not-exist-error-and-ensure-your-r-1740549269082.txt  Pasted-Prompt-Instruction-Investigate-why-the-TypeScript-compiler-cannot-resolve-certain-modules-why-som-1740608641640.txt  Pasted-Remove-or-Disable-Any-Node-Express-Code-1-Delete-or-comment-out-Any-Express-or-Node-related-se-1740551848868.txt  docs_replit_com_replit-workspace_workflows.md  paper.md  (+1 more)
client/: package.json  (+2 more)
(+185 files in other folders)
