[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Knowledge Graph System with FastAPI and React"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "anthropic>=0.47.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "networkx>=3.4.2",
    "numpy>=2.2.3",
    "openai>=1.64.0",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "uvicorn[standard]>=0.34.0",
    "websockets>=15.0",
]

[tool.uv]
exclude = []